prevent wrapping tooltip links to new line

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -10,3 +10,7 @@
 .panel-body-primary {
   background-color: $brand-primary;
 }
+
+.tooltip-link {
+  white-space:nowrap
+}
